[workspace]
members = [
    "quanta-artifact",
    "quanta-crypto",
    "quanta-database",
    "quanta-swap",
    "quanta-network",
    "quanta-proxy",
]

[workspace.dependencies]
async-std = "1.12.0"
async-trait = "0.1.68"
bincode = "1.3.3"
blake3 = "1.4.0"
bs58 = "0.5.0"
digest = "0.10.7"
fnv = "1.0.7"
futures = "0.3.28"
hex = "0.4.3"
libflate = "1.4.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
prost = "0.11.9"
prost-build = "0.11.9"
rand = "0.8.5"
serde_json = "1.0.97"
sha2 = "0.10.7"
sha3 = "0.10.8"
sled = "0.34.7"
thiserror = "1.0.40"

[workspace.dependencies.quanta-artifact]
path = "quanta-artifact"

[workspace.dependencies.quanta-crypto]
path = "quanta-crypto"

[workspace.dependencies.quanta-swap]
path = "quanta-swap"

[workspace.dependencies.quanta-database]
path = "quanta-database"

[workspace.dependencies.quanta-proxy]
path = "quanta-proxy"

[workspace.dependencies.base64ct]
version = "1.6.0"
features = ["alloc"]

[workspace.dependencies.serde]
version = "1.0.164"
features = ["derive"]

[workspace.dependencies.libp2p]
version = "0.51.3"
default-features = false
features = [
    "async-std",
    "autonat",
    "dcutr",
    "dns",
    "identify",
    "kad",
    "gossipsub",
    "macros",
    "metrics",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "relay",
    "request-response",
    "tcp",
    "yamux",
    "serde",
    "quic",
]
