[workspace]
members = [
    "crates/quanta-artifact",
    "crates/quanta-crypto",
    "crates/quanta-database",
    "crates/quanta-http",
    "crates/quanta-network",
    "crates/quanta-swap",
]

[workspace.dependencies]
actix-web = "4.3.1"
async-std = "1.12.0"
async-trait = "0.1.68"
base64ct = { version = "1.6.0", features = ["alloc"] }
bincode = "1.3.3"
blake3 = "1.4.0"
bs58 = "0.5.0"
byteorder = "1.4.3"
digest = "0.10.7"
fnv = "1.0.7"
futures = "0.3.28"
hex = "0.4.3"
libflate = "1.4.0"
libp2p = { version = "0.51.3", features = ["async-std",
    "autonat",
    "dcutr",
    "dns",
    "identify",
    "kad",
    "gossipsub",
    "macros",
    "metrics",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "relay",
    "request-response",
    "tcp",
    "yamux",
    "serde",
    "quic",
] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
prost = "0.11.9"
prost-build = "0.11.9"
quanta-artifact = { path = "crates/quanta-artifact" }
quanta-crypto = { path = "crates/quanta-crypto" }
quanta-database = { path = "crates/quanta-database" }
quanta-http = { path = "crates/quanta-http" }
quanta-swap = { path = "crates/quanta-swap" }
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
sha2 = "0.10.7"
sha3 = "0.10.8"
sled = "0.34.7"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
