[package]
name = "quanta-crypto"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
sha3 = { workspace = true }
