[package]
name = "quanta-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quanta-swap = { workspace = true }
quanta-database = { workspace = true }
libp2p = { workspace = true }
thiserror = { workspace = true }
