[package]
name = "quanta-network"
version = "0.1.0"
edition = "2021"


[dependencies]
quanta-swap = { workspace = true }
quanta-database = { workspace = true }
libp2p = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-std = { workspace = true }
tokio = { workspace = true }
