[package]
name = "quanta-store"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quanta-artifact = { workspace = true }
quanta-swap = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
