[package]
name = "quanta-artifact"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
libflate = { workspace = true }
quanta-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
