[package]
name = "quanta-network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { workspace = true }
quanta-swap = { workspace = true }
quanta-store = { workspace = true }
tokio = { workspace = true }
quanta-artifact = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
