[package]
name = "quanta-network"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
quanta-artifact = { workspace = true }
quanta-swap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
